--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title> ShanXiang's Personal Website </title>
   </head>
   <body>
-    Hello there, awesome person!
+    <h1> Personal profile </h1>
+    My name is ShanXiang.
   </body>
 </html>
